# synapse-mcp

./: .gitignore  DEVELOPMENT_JOURNAL.md  LICENSE  README.md  pyproject.toml
src/synapse_mcp/: __init__.py  server.py
src/synapse_mcp/prompts/: __init__.py  templates.py
src/synapse_mcp/resources/: __init__.py  wiki.py
src/synapse_mcp/state/: __init__.py  manager.py
src/synapse_mcp/tools/: __init__.py  gitnexus.py  notifier.py  pipeline.py  session.py  wiki.py
